tdf#134746 sw: fix redline hiding of at-char fly on empty paragraphs

If a merged paragraph has no extents, a fly anchored at the start or at
the end should be shown.

(regression from 28b77c89dfcafae82cf2a6d85731b643ff9290e5)

Change-Id: I78135f3c033cf08aad81c86b0ac693528e3f3f8e